--- a/src/resources/html/index.html
+++ b/src/resources/html/index.html
@@ -7,12 +7,16 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="assets/img/favicon.ico" />
+    <!-- inject:css -->
+    <!-- endinject -->
     <!-- build:vendors -->
     <!-- build:systemjs -->
 </head>
 
 <body>
     <app-cookapp>Loading AppComponent content here ...</app-cookapp>
+    <!-- inject:js -->
+    <!-- endinject -->
     <!-- build:app -->
 </body>
 
